# infinite-mucha-esque-scroll

./: .gitignore  README.md  pyproject.toml
src/infinite_mucha_esque_scroll/: cli.py  logger.py  out_painter.py
